# ieor4576_project_2

./: .env.example  .gitignore  Dockerfile  README.md  Requirement.md  app.py  index.html  index_rides.py  pyproject.toml
disney_agent/: agent.py  bigquery_tools.py  rag.py  tools.py
disney_rides_info/: Animal_Kingdom_Affection_Section.md  Animal_Kingdom_Animal_Care_at_Conservation_Station.md  Animal_Kingdom_Avatar_Flight_of_Passage.md  Animal_Kingdom_Discovery_Island_Trails.md  Animal_Kingdom_Expedition_Everest_-_Legend_of_the_Forbidden_Mountain.md  Animal_Kingdom_Expedition_Everest_-_Legend_of_the_Forbidden_Mountain_Single_Rider.md  Animal_Kingdom_Feathered_Friends_in_Flight!.md  Animal_Kingdom_Festival_of_the_Lion_King.md  Animal_Kingdom_Finding_Nemo:_The_Big_Blue..._and_Beyond!.md  Animal_Kingdom_Gorilla_Falls_Exploration_Trail.md  Animal_Kingdom_Kali_River_Rapids.md  Animal_Kingdom_Kilimanjaro_Safaris.md  Animal_Kingdom_Meet_Favorite_Disney_Pals_at_Adventurers_Outpost.md  Animal_Kingdom_Meet_Moana_at_Character_Landing.md  Animal_Kingdom_Na'vi_River_Journey.md  Animal_Kingdom_The_Oasis_Exhibits.md  Animal_Kingdom_Tree_of_Life.md  Animal_Kingdom_Wilderness_Explorers.md  Animal_Kingdom_Wildlife_Express_Train.md  Animal_Kingdom_Zootopia:_Better_Zoogether!_-_NEW!.md  Disney_Adventure_World_Paris_Avengers_Assemble:_Flight_Force.md  Disney_Adventure_World_Paris_Avengers_Assemble:_Flight_Force_Single_Rider.md  Disney_Adventure_World_Paris_Cars_Quatre_Roues_Rallye.md  Disney_Adventure_World_Paris_Cars_ROAD_TRIP.md  Disney_Adventure_World_Paris_Crush's_Coaster.md  (+388 more)
(+3 files in other folders)
